<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#9eecf7">

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/radioGroupSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchCheeseMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BootstrapLightSwitch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchPepperoniMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BootstrapLightSwitch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMushroomsMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BootstrapLightSwitch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mushrooms"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchCornMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BootstrapLightSwitch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corn"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/bootstrap_primary"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/bootstrap_secondary"
        android:text="@string/back" />
</LinearLayout>