<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewPizzaType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/textViewPizzaSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/textViewPizzaToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/textViewPizzaPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="6dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="6dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:layout_marginBottom="6dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bootstrap_primary"
        android:text="@string/submit" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/bootstrap_secondary"
        android:text="@string/back" />

</LinearLayout>