<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ed947b">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
    <RelativeLayout
        android:id="@+id/button_pizza_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_quattro_formaggi"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$10.0"
                android:textColor="#d2e332"
                android:shadowColor="#4c5404"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:layout_marginTop="5dp"
                android:textSize="30dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pizza_1_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circular_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_pizza_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_capricciosa"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$12.0"
                android:textColor="#d2e332"
                android:shadowColor="#4c5404"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:layout_marginTop="5dp"
                android:textSize="30dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pizza_2_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circular_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_pizza_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_hawaiian"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$11.0"
                android:textColor="#d2e332"
                android:shadowColor="#4c5404"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:layout_marginTop="5dp"
                android:textSize="30dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pizza_3_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circular_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_pizza_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_margherita"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$9.0"
                android:textColor="#d2e332"
                android:shadowColor="#4c5404"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:layout_marginTop="5dp"
                android:textSize="30dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pizza_4_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circular_image" />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>